# sushi-shop

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  Dockerfile  GLOSSARY.md  LICENSE  Makefile  README.md  TASKS.md  agents_workflow.md  ai-engineer-architecture-rules.md  alembic.ini  backend-architecture-rules.md  claude_workflow.md  commit-protocol.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  foundations.md  learning_concepts.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: adam.md  aria.md  mira.md  nova.md  rex.md
.claude/agents/logs/: adam-worklog.md  nova-worklog.md  rex-worklog.md
.claude/commands/: handoff-check.md  next-step.md  status.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
hooks/: post_commit_next_step.py  pre_commit_check.py
nginx/: nginx.conf
src/: main.py
src/agents/: circuit_breaker.py  graph.py  state.py  tools.py
src/agents/prompts/: assistant.py
src/api/routes/: agent.py  ingredients.py  meals.py  orders.py
src/core/: cache.py  celery_app.py  database.py  deps.py  settings.py
src/models/: __init__.py  base.py  ingredient.py  meal.py  meal_ingredient.py  order.py  order_item.py
src/schemas/: ingredient.py  meal.py  order.py
src/services/: ingredient_service.py  meal_service.py  order_service.py
src/tasks/: kitchen.py
