[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sushi-shop"
version = "0.1.0"
description = "Sushi restaurant simulation with AI ordering assistant"
requires-python = ">=3.12"

dependencies = [
    # Web framework — async FastAPI with standard extras (includes uvicorn, httpx, etc.)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database — async SQLAlchemy + asyncpg driver for PostgreSQL
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",

    # Migrations — Alembic for all schema changes (no manual DDL)
    "alembic>=1.13.0",

    # Validation — Pydantic v2 for request/response schemas and settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Cache — async Redis client
    "redis>=5.0.0",

    # Task queue — Celery for kitchen worker simulation
    "celery>=5.3.0",

    # HTTP client — used by Nova's agent dispatch tool to POST /orders
    "httpx>=0.27.0",

    # AI agent — LangGraph state machine + LangChain integrations
    "langgraph>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",

    # Circuit breaker — wraps LLM calls to fail fast when the provider is down
    "pybreaker>=1.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",

    # Linting — ruff replaces flake8 + isort + pyupgrade
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─── Ruff (linter) ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
